tests/spec/non_conformant/errors/extend/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend"

mod placeholder;

mod selector;
